# loc-ai-ly

./: .gitignore  CMakeLists.txt  README.md
.github/images/: logo
include/: cpp_httplib.h  inference_engine.hpp  kernels.hpp  server.hpp
include/model_manager/: gguf_loader.hpp  model_manager.hpp  tokenizer.hpp
include/models/: llama.hpp
src/cu_utils/: kernels.cu  quantization.cu
src/llama/: llama_model.cu
src/model_manager/: gguf_loader.cpp  model_manager.cpp  quantization.cu
src/model_manager/tokenizers/: tokenizer.cpp
src/models/: llama.cu
src/server/: server.cpp
